--- a/themes/hypr/hyprland.conf
+++ b/themes/hypr/hyprland.conf
@@ -22,7 +22,7 @@ monitor=eDP-2, preferred, 0x0, 2
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 #
-exec-once = mako && waybar
+exec-once = mako & waybar
 exec-once = alcritty
 
 # Source a file (multi-file configs)
