--- a/apps/.tmux.conf
+++ b/apps/.tmux.conf
@@ -1,13 +1,18 @@
 set -g mouse on
-set-option -sa terminal-features ',alacritty:RGB'
-
+set-option -ga terminal-overrides ",alacritty:Tc"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set-option -g @plugin 'b0o/tmux-autoreload'
+
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @sidebar-tree-command 'lsd --tree --depth 1'
+
+
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @continuum-restore 'on'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
