--- a/home/.config/waybar/config
+++ b/home/.config/waybar/config
@@ -4,11 +4,8 @@
     // -------------------------------------------------------------------------
 
     "layer": "top",
-
     "position": "top",
-
 //     "height": 72 ,
-
     "margin-left": 10,
     "margin-bottom": 0,
     "margin-right": 10,
@@ -67,8 +64,8 @@
     },
     "custom/screenshot_t":{
         "format":"",
-        "on-click": "~/.config/hypr/scripts/screenshot_full",
-        "on-click-right":"~/.config/hypr/scripts/screenshot_area"
+        "on-click": "sleep 0.5s && hyprshot -m region --clipboard-only",
+        "on-click-right":"hyprshot -m window --clipboard-only & sleep 2s"
     },
 
     "clock#1": {
