Added new stuff to zshrc and finally renaming to Arch

--- a/home/.config/waybar/config
+++ b/home/.config/waybar/config
@@ -13,7 +13,7 @@
     "spacing": 5, // Gaps between modules (4px)
 
     "modules-left": [
-        //"custom/rofi",
+        "custom/wofi",
         "hyprland/workspaces",
         //"hyprland/submap",
         "temperature",
@@ -55,11 +55,11 @@
     },
 
 
-    "custom/rofi": {
+    "custom/wofi": {
         "format": "",
         "tooltip": false,
         "on-click-right": "nwg-drawer",
-        "on-click": "wofi --show run",
+        "on-click": "wofi --show drun",
         "on-click-middle": "pkill -9 wofi"
     },
     "custom/screenshot_t":{
