--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # vim:fileencoding=utf-8:foldmethod=marker
-include ./Pnevma.conf
+include ./theme.conf
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
