--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -7,9 +7,9 @@ include ./theme.conf
 #: characters.
 
 font_family        Monofur Nerd Font
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
