chore: update dependencies and aliases in config files

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -6,11 +6,10 @@ include ./theme.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family        Monofur Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-
+font_family        Mononoki Nerd Font
+bold_font          Mononoki Nerd Font Bold
+italic_font        Mononoki Nerd Font Italic
+bold_italic_font   Mononoki Nerd Font Bold Italic
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
 #: +list-fonts` command. By default they are derived automatically, by
@@ -24,7 +23,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 20
+font_size 16
 
 #: Font size (in pts)
 
@@ -951,7 +950,7 @@ enabled_layouts fat:bias=50;full_size=1;mirrored=false tall:bias=60;full_size=1;
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge top
 
 #: The edge to show the tab bar on, top or bottom.
 
@@ -966,7 +965,7 @@ enabled_layouts fat:bias=50;full_size=1;mirrored=false tall:bias=60;full_size=1;
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -1143,7 +1142,7 @@ background_opacity 0.9
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-background_blur 4
+background_blur 10
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
