new nix flake and kitty experiments

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -298,7 +298,7 @@ cursor_stop_blinking_after 10.0
 
 #: }}}
 
-#: Scrollback {{{
+#: Scrollback {{i{
 
 # scrollback_lines 2000
 
@@ -681,7 +681,7 @@ show_hyperlink_targets no
 
 #: Perfoirmance tuning {{{
 
-repaint_delay 100
+repaint_delay 150
 
 #: Delay between screen updates (in milliseconds). Decreasing it,
 #: increases frames-per-second (FPS) at the cost of more CPU usage.
@@ -691,7 +691,7 @@ repaint_delay 100
 #: refresh rate. Also, to minimize latency when there is pending input
 #: to be processed, this option is ignored.
 
-input_delay 5
+input_delay 7
 
 #: Delay before input from the program running in the terminal is
 #: processed (in milliseconds). Note that decreasing it will increase
@@ -1118,7 +1118,7 @@ tab_bar_style powerline
 
 #: The foreground and background colors.
 
-background_opacity 0.5
+background_opacity 0.75
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1142,7 +1142,7 @@ background_opacity 0.5
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-background_blur 20
+background_blur 64
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
