--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -23,7 +23,7 @@ bold_italic_font   Mononoki Nerd Font Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 17
+font_size 16
 
 #: Font size (in pts)
 
@@ -298,7 +298,7 @@ cursor_stop_blinking_after 10.0
 
 #: }}}
 
-#: Scrollback {{i{
+#: Scrollback {{{
 
 # scrollback_lines 2000
 
