hyper optimization of neovim

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@ include ./theme.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family        Mononoki Nerd Font
-bold_font          Mononoki Nerd Font Bold
-italic_font        Mononoki Nerd Font Italic
-bold_italic_font   Mononoki Nerd Font Bold Italic
+font_family        Mononoki Nerd Font Mono Regular
+bold_font          Mononoki Nerd Font Mono Bold
+italic_font        Mononoki Nerd Font Mono Italic
+bold_italic_font   Mononoki Nerd Font Mono Bold Italic
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
 #: +list-fonts` command. By default they are derived automatically, by
@@ -23,7 +23,7 @@ bold_italic_font   Mononoki Nerd Font Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16
+font_size 14
 
 #: Font size (in pts)
 
@@ -679,9 +679,9 @@ show_hyperlink_targets no
 
 #: }}}
 
-#: Perfoirmance tuning {{{
+#: Perfourmance tuning {{{
 
-repaint_delay 150
+repaint_delay 100
 
 #: Delay between screen updates (in milliseconds). Decreasing it,
 #: increases frames-per-second (FPS) at the cost of more CPU usage.
@@ -691,7 +691,7 @@ repaint_delay 150
 #: refresh rate. Also, to minimize latency when there is pending input
 #: to be processed, this option is ignored.
 
-input_delay 7
+input_delay 5
 
 #: Delay before input from the program running in the terminal is
 #: processed (in milliseconds). Note that decreasing it will increase
@@ -965,7 +965,7 @@ tab_bar_edge top
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style powerline
+tab_bar_style fade
 
 #: The tab bar style, can be one of:
 
