Relocated kitty into gnustow format

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1284,7 +1284,7 @@ background_blur 64
 
 #: Advanced {{{
 
-# shell .
+shell /opt/homebrew/bin/fish --login --interactive
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
